Slide Feature IMG

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@ satu variabel
 <html>
   <head>
     <title>Test Ayam Goreng Monas</title>
-    <link rel="stylesheet" href="/style.css/header.css" />
-    <link rel="stylesheet" href="/style.css/home.css" />
-    <link rel="stylesheet" href="/style.css/menu.css" />
-    <link rel="stylesheet" href="/style.css/location.css" />
+    <link rel="stylesheet" href="./style.css/header.css" />
+    <link rel="stylesheet" href="./style.css/home.css" />
+    <link rel="stylesheet" href="./style.css/menu.css" />
+    <link rel="stylesheet" href="./style.css/location.css" />
+    <script src="./script.js" defer></script> </script>
   </head>
   <body>
     <section class="header">
@@ -25,11 +26,11 @@ satu variabel
     <section class="pages">
       <section class="home-page">
         <div class="home-page-container">
-          <img
-            class="background-home"
-            src="/source/Background/Back2.jpg"
-            alt="Background-2"
-          />
+          <div class="background-slider-wrapper">
+            <img src="./source/Background/Back1.jpg" alt="Background Restoran 1">
+            <img src="./source/Background/Back2.jpg" alt="Background Restoran 2">
+            <img src="./source/Background/Back3.jpg" alt="Background Restoran 3">
+          </div>
           <div class="restaurant-logo">
             <img
               class="restaurant-image"
