--- a/Ayam-Goreng-Monas-Website/index.html
+++ b/Ayam-Goreng-Monas-Website/index.html
@@ -1,6 +1,7 @@
 // konek file database kesini // ambil data dari databasenya kesini disimpan di
 satu variabel
 
+<!-- coba -->
 <!DOCTYPE html>
 <html>
   <head>
