--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a href="#menu" class="nav menu">Menu</a>
         <a href="#news" class="nav menu">News</a>
         <a href="#review" class="nav review">Review</a>
-        <a href="#location" class="nav location">Location</a>
+        <a href="location.html" class="nav location">Location</a>
       </div>
     </section>
     <section class="home">
