--- a/review.html
+++ b/review.html
@@ -20,6 +20,7 @@
     />
     <script src="./script.js" defer></script>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <script src="https://unpkg.com/feather-icons"></script>
   </head>
   <body>
     <section class="header">
@@ -93,7 +94,7 @@
       </div>
 
       <div class="footer-bottom">
-        <p>Copyright © 2025 Ayam Goreng Monas. Hak Cipta Dilindungi.</p>
+        <p>Copyright &copy 2025 Ayam Goreng Monas. Hak Cipta Dilindungi.</p>
       </div>
     </section>
   </body>
