--- a/location.html
+++ b/location.html
@@ -12,14 +12,10 @@
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
     />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="./source/Logo 2.png"
-    />
+    <link rel="icon" type="image/png" sizes="16x16" href="./source/Logo.png" />
     <script src="./script.js" defer></script>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <script src="https://unpkg.com/feather-icons"></script>
   </head>
   <body>
     <section class="header">
@@ -31,14 +27,15 @@
       </div>
       <div class="header-right">
         <a href="#home" class="nav home">Home</a>
-        <a href="#our story" class="nav story">Our Story</a>
-        <a href="#menu" class="nav menu">Menu</a>
-        <a href="#news" class="nav menu">News</a>
-        <a href="#review" class="nav review">Review</a>
-        <a href="#location" class="nav location">Location</a>
+        <a href="story.html" class="nav story">Our Story</a>
+        <a href="menu.html" class="nav menu">Menu</a>
+        <a href="news.html" class="nav menu">News</a>
+        <a href="review.html" class="nav review">Review</a>
+        <a href="location.html" class="nav location">Location</a>
       </div>
     </section>
     <section class="location">
+      <h2>Outlet Ayam Goreng Monas</h2>
       <div></div>
       <div></div>
       <div></div>
@@ -83,18 +80,18 @@
         </div>
 
         <div class="footer-social">
-          <a href="#" class="social-icon"
-            ><img src="./source/instagram.png" alt="Instagram"
-          /></a>
-          <a href="#" class="social-icon"
-            ><img src="./source/tiktok.png" alt="TikTok"
-          /></a>
+          <a href="#" class="social-icon"> <i data-feather="instagram"></i></a>
+          <a href="#" class="social-icon"><i data-feather="facebook"></i></a>
+          <a href="#" class="social-icon"><i data-feather="twitter"></i></a>
         </div>
       </div>
 
       <div class="footer-bottom">
-        <p>Copyright © 2025 Ayam Goreng Monas. Hak Cipta Dilindungi.</p>
+        <p>Copyright &copy 2025 Ayam Goreng Monas. Hak Cipta Dilindungi.</p>
       </div>
     </section>
+    <script>
+      feather.replace();
+    </script>
   </body>
 </html>
