--- a/location.html
+++ b/location.html
@@ -4,7 +4,7 @@
     <title>Ayam Goreng Monas</title>
     <link rel="stylesheet" href="./style.css/header.css" />
     <link rel="stylesheet" href="./style.css/menu.css" />
-    <link rel="stylesheet" href="./style.css/location.css" />
+    <link rel="stylesheet" href="./style/location.css" />
     <link rel="stylesheet" href="./style.css/review.css" />
     <link rel="stylesheet" href="./style.css/home.css" />
     <link rel="stylesheet" href="./style.css/footer.css" />
@@ -36,12 +36,51 @@
     </section>
     <section class="location">
       <h2>Outlet Ayam Goreng Monas</h2>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
+      <div class="search-bar">
+        <input
+          type="text"
+          id="location-search"
+          placeholder="Contoh: Lembuswana"
+        />
+        <button id="search-button">Cari</button>
+      </div>
+      <div class="location-card">
+        <div class="card">
+          <h3>AGM Mall SCP</h3>
+          <p>
+            Samarinda Central Plaza lantai 3 Jl. P. Irian No.1, Karang Mumus,
+            Kec. Samarinda Kota, Kota Samarinda
+          </p>
+          <p class="time">
+            <i data-feather="clock"></i> <span>10.00 - 22.00 WIB</span>
+          </p>
+          <button class="detail-btn">Lihat Detail</button>
+        </div>
+
+        <div class="card">
+          <h3>AGM Mall Lembuswana</h3>
+          <p>
+            Lembuswana lantai dasar Jl. Mayor Jendral S. Parman No. 28, Gunung
+            Kelua, Samarinda Kota, Kota Samarinda
+          </p>
+          <p class="time">
+            <i data-feather="clock"></i> <span>10.00 - 22.00 WIB</span>
+          </p>
+          <button class="detail-btn">Lihat Detail</button>
+        </div>
+
+        <div class="card">
+          <h3>AGM Mall Samarinda Square</h3>
+          <p>
+            Samarinda Square lantai 1 Jl. M. Yamin, Gunung Kelua, Samarinda Ulu,
+            Kota Samarinda
+          </p>
+          <p class="time">
+            <i data-feather="clock"></i> <span>10.00 - 22.00 WIB</span>
+          </p>
+          <button class="detail-btn">Lihat Detail</button>
+        </div>
+      </div>
     </section>
     <section class="footer">
       <div class="footer-container">
