--- a/location.html
+++ b/location.html
@@ -42,7 +42,7 @@
           id="location-search"
           placeholder="Contoh: Lembuswana"
         />
-        <button id="search-button">Cari</button>
+        <button id="search-button"><i data-feather="search"></i></button>
       </div>
       <div class="location-card">
         <div class="card">
