style dan navbar

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <title>Ayam Goreng Monas</title>
     <link rel="stylesheet" href="./style/header.css" />
-    <link rel="stylesheet" href="./style.css/menu.css" />
-    <link rel="stylesheet" href="./style.css/location.css" />
-    <link rel="stylesheet" href="./style.css/review.css" />
-    <link rel="stylesheet" href="./style.css/home.css" />
-    <link rel="stylesheet" href="./style.css/footer.css" />
+    <link rel="stylesheet" href="./style/menu.css" />
+    <link rel="stylesheet" href="./style/location.css" />
+    <link rel="stylesheet" href="./style/review.css" />
+    <link rel="stylesheet" href="./style/home.css" />
+    <link rel="stylesheet" href="./style/footer.css" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
@@ -25,10 +25,10 @@
       </div>
       <div class="header-right">
         <a href="#home" class="nav home">Home</a>
-        <a href="#our story" class="nav story">Our Story</a>
-        <a href="#menu" class="nav menu">Menu</a>
-        <a href="#news" class="nav menu">News</a>
-        <a href="#review" class="nav review">Review</a>
+        <a href="story.html" class="nav story">Our Story</a>
+        <a href="menu.html" class="nav menu">Menu</a>
+        <a href="news.html" class="nav menu">News</a>
+        <a href="review.html" class="nav review">Review</a>
         <a href="location.html" class="nav location">Location</a>
       </div>
     </section>
