--- a/location.html
+++ b/location.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <title>Ayam Goreng Monas</title>
-    <link rel="stylesheet" href="./style.css/header.css" />
-    <link rel="stylesheet" href="./style.css/menu.css" />
+    <link rel="stylesheet" href="./style/header.css" />
+    <link rel="stylesheet" href="./style/menu.css" />
     <link rel="stylesheet" href="./style/location.css" />
-    <link rel="stylesheet" href="./style.css/review.css" />
-    <link rel="stylesheet" href="./style.css/home.css" />
-    <link rel="stylesheet" href="./style.css/footer.css" />
+    <link rel="stylesheet" href="./style/review.css" />
+    <link rel="stylesheet" href="./style/home.css" />
+    <link rel="stylesheet" href="./style/footer.css" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
@@ -26,7 +26,7 @@
         </div>
       </div>
       <div class="header-right">
-        <a href="#home" class="nav home">Home</a>
+        <a href="index.html" class="nav home">Home</a>
         <a href="story.html" class="nav story">Our Story</a>
         <a href="menu.html" class="nav menu">Menu</a>
         <a href="news.html" class="nav menu">News</a>
