--- a/story.html
+++ b/story.html
@@ -12,12 +12,7 @@
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
     />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="./source/Logo 2.png"
-    />
+    <link rel="icon" type="image/png" sizes="16x16" href="./source/Logo.png" />
     <script src="./script.js" defer></script>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   </head>
@@ -93,7 +88,7 @@
       </div>
 
       <div class="footer-bottom">
-        <p>Copyright © 2025 Ayam Goreng Monas. Hak Cipta Dilindungi.</p>
+        <p>Copyright &copy 2025 Ayam Goreng Monas. Hak Cipta Dilindungi.</p>
       </div>
     </section>
   </body>
