--- a/story.html
+++ b/story.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./style/location.css" />
     <link rel="stylesheet" href="./style/review.css" />
     <link rel="stylesheet" href="./style/home.css" />
+    <link rel="stylesheet" href="./style/story.css" />
     <link rel="stylesheet" href="./style/footer.css" />
     <link
       rel="stylesheet"
@@ -33,13 +34,63 @@
         <a href="location.html" class="nav location">Location</a>
       </div>
     </section>
-    <section class="story">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
+    <section class="story-section">
+      <div class="story-header">
+        <h2>Perjalanan Kami</h2>
+      </div>
+
+      <div class="timeline">
+        <!-- Timeline Item 1 -->
+        <div class="timeline-item left">
+          <div class="timeline-dot"></div>
+          <div class="timeline-content">
+            <div class="timeline-year">2005</div>
+            <h2 class="timeline-title">Awal Berdiri</h2>
+            <p class="timeline-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi
+              totam nostrum pariatur accusantium quisquam architecto?
+            </p>
+          </div>
+          <div class="timeline-image">
+            <img src="./source/Background/Back1.jpg" alt="Awal Berdiri 2005" />
+          </div>
+        </div>
+
+        <!-- Timeline Item 2 -->
+        <div class="timeline-item right">
+          <div class="timeline-dot"></div>
+          <div class="timeline-content">
+            <div class="timeline-year">2006</div>
+            <h2 class="timeline-title">Cabang Pertama</h2>
+            <p class="timeline-description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Repellendus aliquam maiores et sunt saepe molestiae.
+            </p>
+          </div>
+          <div class="timeline-image">
+            <img
+              src="./source/Background/Back2.jpg"
+              alt="Cabang Pertama 2006"
+            />
+          </div>
+        </div>
+
+        <!-- Timeline Item 3 -->
+        <div class="timeline-item left">
+          <div class="timeline-dot"></div>
+          <div class="timeline-content">
+            <div class="timeline-year">2007</div>
+            <h2 class="timeline-title">Cabang Kedua</h2>
+            <p class="timeline-description">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Praesentium veritatis accusantium maiores soluta molestiae alias?
+            </p>
+          </div>
+          <div class="timeline-image">
+            <img src="./source/Background/Back3.jpg" alt="Cabang Kedua 2007" />
+          </div>
+        </div>
+      </div>
     </section>
     <section class="footer">
       <div class="footer-container">
