--- a/menu.html
+++ b/menu.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./style/location.css" />
     <link rel="stylesheet" href="./style/review.css" />
     <link rel="stylesheet" href="./style/home.css" />
+    <link rel="stylesheet" href="./style/story.css" />
     <link rel="stylesheet" href="./style/footer.css" />
     <link
       rel="stylesheet"
