--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./source/Logo.png" />
     <script src="./script.js" defer></script>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <script src="https://unpkg.com/feather-icons"></script>
   </head>
   <body>
     <section class="main-header">
@@ -45,17 +46,16 @@
     <section class="footer">
       <div class="footer-container">
         <div class="footer-logo">
-          <img src="./source/Logo.png" alt="Ayam Goreng Monas Logo" />
+          <img src="./Source/Logo.png" alt="Ayam Goreng Monas Logo" />
           <p class="footer-slogan">Jagonya Rasa</p>
         </div>
 
         <div class="footer-column">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="#story">Kisah</a></li>
-            <li><a href="#menu">Menu</a></li>
-            <li><a href="#partnership">Kemitraan</a></li>
-            <li><a href="#news">Berita</a></li>
+            <li><a href="story.html">Kisah</a></li>
+            <li><a href="menu.html">Menu</a></li>
+            <li><a href="news.html">Berita</a></li>
           </ul>
         </div>
 
@@ -79,12 +79,9 @@
         </div>
 
         <div class="footer-social">
-          <a href="#" class="social-icon"
-            ><img src="./source/instagram.png" alt="Instagram"
-          /></a>
-          <a href="#" class="social-icon"
-            ><img src="./source/tiktok.png" alt="TikTok"
-          /></a>
+          <a href="#" class="social-icon"> <i data-feather="instagram"></i></a>
+          <a href="#" class="social-icon"><i data-feather="facebook"></i></a>
+          <a href="#" class="social-icon"><i data-feather="twitter"></i></a>
         </div>
       </div>
 
@@ -92,5 +89,8 @@
         <p>Copyright &copy 2025 Ayam Goreng Monas. Hak Cipta Dilindungi.</p>
       </div>
     </section>
+    <script>
+      feather.replace();
+    </script>
   </body>
 </html>
