--- a/location.html
+++ b/location.html
@@ -19,12 +19,12 @@
     <script src="https://unpkg.com/feather-icons"></script>
   </head>
   <body>
-    <section class="header">
+    <section class="main-header">
       <div class="header-left">
-        <div class="restaurant-name">AYAM GORENG MONAS</div>
         <div class="restaurant-logo">
-          <img src="./source/Logo 2.png" alt="restaurant-logo" />
+          <img src="./source/Logo.png" alt="restaurant-logo" />
         </div>
+        <div class="restaurant-name">AYAM GORENG MONAS</div>
       </div>
       <div class="header-right">
         <a href="index.html" class="nav home">Home</a>
