--- a/story.html
+++ b/story.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./style/home.css" />
     <link rel="stylesheet" href="./style/story.css" />
     <link rel="stylesheet" href="./style/footer.css" />
+    <link rel="stylesheet" href="./style/hero.css" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
@@ -32,6 +33,39 @@
         <a href="news.html" class="nav menu">News</a>
         <a href="review.html" class="nav review">Review</a>
         <a href="location.html" class="nav location">Location</a>
+      </div>
+    </section>
+    <section class="hero">
+      <div class="carousel-container">
+        <div class="image-carousel">
+          <div class="carousel-track">
+            <div class="carousel-slide">
+              <img
+                src="./Source/Poster/Poster1.png"
+                alt="Ayam Goreng Monas Poster 1"
+              />
+            </div>
+            <div class="carousel-slide">
+              <img
+                src="./Source/Background/Back1.jpg"
+                alt="Ayam Goreng Monas Background 1"
+              />
+            </div>
+          </div>
+        </div>
+
+        <div class="carousel-dots">
+          <button
+            class="dot active"
+            data-index="0"
+            aria-label="Go to slide 1"
+          ></button>
+          <button
+            class="dot"
+            data-index="1"
+            aria-label="Go to slide 2"
+          ></button>
+        </div>
       </div>
     </section>
     <section class="story-section">
@@ -95,22 +129,21 @@
     <section class="footer">
       <div class="footer-container">
         <div class="footer-logo">
-          <img src="./source/Logo 2.png" alt="Ayam Goreng Monas Logo" />
-          <p class="footer-slogan">Jagonya Rasa</p>
+          <img src="./Source/Logo.png" alt="Ayam Goreng Monas Logo" />
+          <p class="footer-slogan">Enak Tiada Tanding</p>
         </div>
 
         <div class="footer-column">
-          <h3>Quick Links</h3>
+          <h3>Link</h3>
           <ul>
-            <li><a href="#story">Kisah</a></li>
-            <li><a href="#menu">Menu</a></li>
-            <li><a href="#partnership">Kemitraan</a></li>
-            <li><a href="#news">Berita</a></li>
+            <li><a href="story.html">Kisah</a></li>
+            <li><a href="menu.html">Menu</a></li>
+            <li><a href="news.html">Berita</a></li>
           </ul>
         </div>
 
         <div class="footer-column">
-          <h3>Order</h3>
+          <h3>Pemesanan</h3>
           <ul>
             <li>
               <a href="https://wa.me/6281234567890" target="_blank">WhatsApp</a>
