--- a/location.html
+++ b/location.html
@@ -32,7 +32,7 @@
         <a href="story.html" class="nav story">Our Story</a>
         <a href="menu.html" class="nav menu">Menu</a>
         <a href="news.html" class="nav menu">News</a>
-        <a href="review.html" class="nav review">Review</a>
+        <a href="review.php" class="nav review">Review</a>
         <a href="location.html" class="nav location">Location</a>
       </div>
     </section>
@@ -71,14 +71,6 @@
     </section>
     <section class="location">
       <h2>Outlet Ayam Goreng Monas</h2>
-      <div class="search-bar">
-        <input
-          type="text"
-          id="location-search"
-          placeholder="Contoh: Lembuswana"
-        />
-        <button id="search-button"><i data-feather="search"></i></button>
-      </div>
       <div class="location-card">
         <div class="card">
           <h3>AGM Mall SCP</h3>
