--- a/news.html
+++ b/news.html
@@ -31,7 +31,7 @@
         <a href="story.html" class="nav story">Our Story</a>
         <a href="menu.html" class="nav menu">Menu</a>
         <a href="news.html" class="nav menu">News</a>
-        <a href="review.html" class="nav review">Review</a>
+        <a href="review.php" class="nav review">Review</a>
         <a href="location.html" class="nav location">Location</a>
       </div>
     </section>
