--- a/menu.html
+++ b/menu.html
@@ -69,12 +69,64 @@
       </div>
     </section>
     <section class="menu">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
+      <h2>Menu Kami</h2>
+
+      <div class="Card">
+        <h3>Makanan Berat</h3>
+        <div class="menu-grid">
+          <div class="menu-item">
+            <img
+              src="./Source/Daftar menu/Paket Monas.png"
+              alt="Paket Ayam Monas"
+            />
+            <div class="menu-info">
+              <p>Paket Ayam Monas</p>
+              <span class="favorite">#FAVORITE</span>
+            </div>
+          </div>
+
+          <div class="menu-item">
+            <img src="./Source/Daftar menu/Bakwan.png" alt="Bakwan" />
+            <div class="menu-info">
+              <p>Bakwan</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="Camilan">
+        <h3>Camilan / Dessert</h3>
+        <div class="menu-grid">
+          <div class="menu-item">
+            <img
+              src="./Source/Daftar menu/Chicken Strip.png"
+              alt="Chicken Strip"
+            />
+            <div class="menu-info">
+              <p>Chicken Strip</p>
+              <span class="favorite">#FAVORITE</span>
+            </div>
+          </div>
+
+          <div class="menu-item">
+            <img
+              src="./Source/Daftar menu/French fries.png"
+              alt="French Fries"
+            />
+            <div class="menu-info">
+              <p>French Fries</p>
+            </div>
+          </div>
+
+          <div class="menu-item">
+            <img src="./Source/Daftar menu/Es Blewah.png" alt="Es Blewah" />
+            <div class="menu-info">
+              <p>Es Blewah</p>
+              <span class="favorite">#FAVORITE</span>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <section class="footer">
       <div class="footer-container">
