--- a/menu.html
+++ b/menu.html
@@ -125,6 +125,13 @@
               <span class="favorite">#FAVORITE</span>
             </div>
           </div>
+          <div class="menu-item">
+            <img src="./Source/Daftar menu/Siomay.png" alt="Es Blewah" />
+            <div class="menu-info">
+              <p>Siomay</p>
+              <span class="favorite">#FAVORITE</span>
+            </div>
+          </div>
         </div>
       </div>
     </section>
