Detail-Btn Lokasi

--- a/location.html
+++ b/location.html
@@ -48,7 +48,7 @@
           <p class="time">
             <i data-feather="clock"></i> <span>10.00 - 22.00 WIB</span>
           </p>
-          <button class="detail-btn">Lihat Detail</button>
+          <button class="detail-btn">Temukan Kami</button>
         </div>
 
         <div class="card">
@@ -60,7 +60,7 @@
           <p class="time">
             <i data-feather="clock"></i> <span>10.00 - 22.00 WIB</span>
           </p>
-          <button class="detail-btn">Lihat Detail</button>
+          <button class="detail-btn">Temukan Kami</button>
         </div>
 
         <div class="card">
@@ -72,7 +72,7 @@
           <p class="time">
             <i data-feather="clock"></i> <span>10.00 - 22.00 WIB</span>
           </p>
-          <button class="detail-btn">Lihat Detail</button>
+          <button class="detail-btn">Temukan Kami</button>
         </div>
       </div>
     </section>
