--- a/location.html
+++ b/location.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./style/story.css" />
     <link rel="stylesheet" href="./style/footer.css" />
     <link rel="stylesheet" href="./style/hero.css" />
+    <link rel="stylesheet" href="./style/news.css" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
