--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./style/home.css" />
     <link rel="stylesheet" href="./style/story.css" />
     <link rel="stylesheet" href="./style/footer.css" />
-    <link rel="stylesheet" href="./style/hero.css" />
+    <link rel="stylesheet" href="./style/news.css" />
     <link rel="icon" type="image/png" sizes="16x16" href="./source/Logo.png" />
     <script src="./script.js" defer></script>
   </head>
