--- a/news.html
+++ b/news.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./style/story.css" />
     <link rel="stylesheet" href="./style/footer.css" />
     <link rel="stylesheet" href="./style/hero.css" />
+    <link rel="stylesheet" href="./style/news.css" />
     <link rel="icon" type="image/png" sizes="16x16" href="./source/Logo.png" />
     <script src="./script.js" defer></script>
   </head>
@@ -28,6 +29,32 @@
         <a href="news.html" class="nav menu">News</a>
         <a href="review.php" class="nav review">Review</a>
         <a href="location.html" class="nav location">Location</a>
+      </div>
+    </section>
+    <section class="news">
+      <h2>Berita</h2>
+      <div class="Card-news">
+        <div class="card-item">
+          <h3>Lorem ipsum dolor sit amet.</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis,
+            quod!
+          </p>
+        </div>
+        <div class="card-item">
+          <h3>Lorem ipsum dolor sit amet.</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis,
+            quod!
+          </p>
+        </div>
+        <div class="card-item">
+          <h3>Lorem ipsum dolor sit amet.</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis,
+            quod!
+          </p>
+        </div>
       </div>
     </section>
     <section class="footer">
