--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./style/location.css" />
     <link rel="stylesheet" href="./style/review.css" />
     <link rel="stylesheet" href="./style/home.css" />
+    <link rel="stylesheet" href="./style/hero.css" />
     <link rel="stylesheet" href="./style/story.css" />
     <link rel="stylesheet" href="./style/footer.css" />
     <link rel="stylesheet" href="./style/news.css" />
@@ -30,41 +31,40 @@
         <a href="location.html" class="nav location">Location</a>
       </div>
     </section>
-    <section class="home">
-      <div class="hero">
-        <div class="carousel-container">
-          <div class="image-carousel">
-            <div class="carousel-track">
-              <div class="carousel-slide">
-                <img
-                  src="./Source/Poster/Poster1.png"
-                  alt="Ayam Goreng Monas Poster 1"
-                />
-              </div>
-              <div class="carousel-slide">
-                <img
-                  src="./Source/Background/Back1.jpg"
-                  alt="Ayam Goreng Monas Background 1"
-                />
-              </div>
+    <section class="hero">
+      <div class="carousel-container">
+        <div class="image-carousel">
+          <div class="carousel-track">
+            <div class="carousel-slide">
+              <img
+                src="./Source/Poster/Poster1.png"
+                alt="Ayam Goreng Monas Poster 1"
+              />
+            </div>
+            <div class="carousel-slide">
+              <img
+                src="./Source/Background/Back1.jpg"
+                alt="Ayam Goreng Monas Background 1"
+              />
             </div>
           </div>
+        </div>
 
-          <div class="carousel-dots">
-            <button
-              class="dot active"
-              data-index="0"
-              aria-label="Go to slide 1"
-            ></button>
-            <button
-              class="dot"
-              data-index="1"
-              aria-label="Go to slide 2"
-            ></button>
-          </div>
+        <div class="carousel-dots">
+          <button
+            class="dot active"
+            data-index="0"
+            aria-label="Go to slide 1"
+          ></button>
+          <button
+            class="dot"
+            data-index="1"
+            aria-label="Go to slide 2"
+          ></button>
         </div>
       </div>
     </section>
+    <section class="home"></section>
     <section class="footer">
       <div class="footer-container">
         <div class="footer-logo">
