--- a/index.html
+++ b/index.html
@@ -64,7 +64,21 @@
         </div>
       </div>
     </section>
-    <section class="home"></section>
+    <section class="home">
+      <div class="home-container">
+        <div class="welcome-section">
+          <h1 class="tagline">Rasa yang tiada tanding</h1>
+          <p class="description">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque
+            similique molestias deserunt excepturi tenetur repellendus?
+          </p>
+          <div class="cta-buttons">
+            <a href="menu.html" class="btn btn-primary">Lihat Menu</a>
+            <a href="location.html" class="btn btn-secondary">Temukan Kami</a>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="footer">
       <div class="footer-container">
         <div class="footer-logo">
