--- a/manage_menu.html
+++ b/manage_menu.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./source/Logo.png" />
     <link rel="stylesheet" href="./style/admin.css" />
     <link rel="stylesheet" href="./style/header.css" />
+    <link rel="stylesheet" href="./style/manage_menu.css" />
     <script src="https://unpkg.com/feather-icons"></script>
   </head>
   <body>
@@ -35,6 +36,26 @@
           <a href="manage_reviews.html">Manage Reviews</a>
         </li>
       </ul>
+    </section>
+    <section class="main-content">
+      <div class="card-container">
+        <div class="card-item">
+          <h3>Tambah Menu Baru</h3>
+          <button class="add-menu-btn">Tambah Menu</button>
+        </div>
+        <div class="card-item">
+          <h3>Update Menu</h3>
+          <button class="update-menu-btn">Update Menu</button>
+        </div>
+        <div class="card-item">
+          <h3>Hapus Menu</h3>
+          <button class="update-menu-btn">Hapus Menu</button>
+        </div>
+        <div class="card-item">
+          <h3>Lihat Menu</h3>
+          <button class="update-menu-btn">Lihat Menu</button>
+        </div>
+      </div>
     </section>
     <script>
       feather.replace();
