--- a/index.html
+++ b/index.html
@@ -1,142 +1,3 @@
-<!-- <!DOCTYPE html>
-<html>
-  <head>
-    <title>Ayam Goreng Monas</title>
-    <link rel="stylesheet" href="./style/header.css" />
-    <link rel="stylesheet" href="./style/menu.css" />
-    <link rel="stylesheet" href="./style/location.css" />
-    <link rel="stylesheet" href="./style/review.css" />
-    <link rel="stylesheet" href="./style/home.css" />
-    <link rel="stylesheet" href="./style/hero.css" />
-    <link rel="stylesheet" href="./style/story.css" />
-    <link rel="stylesheet" href="./style/footer.css" />
-    <link rel="stylesheet" href="./style/news.css" />
-    <link rel="icon" type="image/png" sizes="16x16" href="./source/Logo.png" />
-    <script src="./script.js" defer></script>
-  </head>
-  <body>
-    <section class="main-header">
-      <div class="header-left">
-        <div class="restaurant-logo">
-          <img src="./source/Logo.png" alt="restaurant-logo" />
-        </div>
-        <div class="restaurant-name">AYAM GORENG MONAS</div>
-      </div>
-      <div class="header-right">
-        <a href="index.html" class="nav home">Home</a>
-        <a href="story.html" class="nav story">Our Story</a>
-        <a href="menu.html" class="nav menu">Menu</a>
-        <a href="news.html" class="nav menu">News</a>
-        <a href="review.php" class="nav review">Review</a>
-        <a href="location.html" class="nav location">Location</a>
-      </div>
-    </section>
-    <section class="hero">
-      <div class="carousel-container">
-        <div class="image-carousel">
-          <div class="carousel-track">
-            <div class="carousel-slide">
-              <img
-                src="./Source/Poster/Poster1.png"
-                alt="Ayam Goreng Monas Poster 1"
-              />
-            </div>
-            <div class="carousel-slide">
-              <img
-                src="./Source/Background/Back1.jpg"
-                alt="Ayam Goreng Monas Background 1"
-              />
-            </div>
-          </div>
-        </div>
-
-        <div class="carousel-dots">
-          <button
-            class="dot active"
-            data-index="0"
-            aria-label="Go to slide 1"
-          ></button>
-          <button
-            class="dot"
-            data-index="1"
-            aria-label="Go to slide 2"
-          ></button>
-        </div>
-      </div>
-    </section>
-    <section class="home">
-      <div class="home-container">
-        <div class="welcome-section">
-          <h1 class="tagline">Rasa yang tiada tanding</h1>
-          <p class="description">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque
-            similique molestias deserunt excepturi tenetur repellendus?
-          </p>
-          <div class="cta-buttons">
-            <a href="menu.html" class="btn btn-primary">Lihat Menu</a>
-            <a href="location.html" class="btn btn-secondary">Temukan Kami</a>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="footer">
-      <div class="footer-container">
-        <div class="footer-logo">
-          <img src="./Source/Logo.png" alt="Ayam Goreng Monas Logo" />
-          <p class="footer-slogan">Enak Tiada Tanding</p>
-        </div>
-
-        <div class="footer-column">
-          <h3>Link</h3>
-          <ul>
-            <li><a href="story.html">Kisah</a></li>
-            <li><a href="menu.html">Menu</a></li>
-            <li><a href="news.html">Berita</a></li>
-          </ul>
-        </div>
-
-        <div class="footer-column">
-          <h3>Pemesanan</h3>
-          <ul>
-            <li>
-              <a href="https://wa.me/6281234567890" target="_blank">WhatsApp</a>
-            </li>
-          </ul>
-        </div>
-
-        <div class="footer-column">
-          <h3>Hubungi</h3>
-          <ul>
-            <li>
-              <a href="https://wa.me/6281234567890" target="_blank">WhatsApp</a>
-            </li>
-            <li><a href="mailto:ayamgorengmonas@gmail.com">Email</a></li>
-          </ul>
-        </div>
-
-        <div class="footer-social">
-          <a href="#" class="social-icon">
-            <img src="./source/instagram.svg" alt="Instagram" />
-          </a>
-          <a href="#" class="social-icon">
-            <img src="./source/tiktok.svg" alt="TikTok" />
-          </a>
-          <a href="#" class="social-icon">
-            <img src="./source/x.svg" alt="X" />
-          </a>
-          <a href="#" class="social-icon">
-            <img src="./source/facebook.svg" alt="Facebook" />
-          </a>
-        </div>
-      </div>
-
-      <div class="footer-bottom">
-        <p>Copyright &copy 2025 Ayam Goreng Monas. Hak Cipta Dilindungi.</p>
-      </div>
-    </section>
-  </body>
-</html> -->
-
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -162,9 +23,9 @@
 
     <nav class="header-right" aria-label="Main Navigation">
       <!-- <a href="#hero" class="nav home">Home</a> -->
-      <a href="#menu" class="nav menu">Menu</a>
-      <a href="#why" class="nav why">Kenapa Kami</a>
-      <a href="#about" class="nav about">Tentang</a>
+      <a href="#menu" class="nav menu">Home</a>
+      <a href="#why" class="nav why">Kisah Kami</a>
+      <a href="#about" class="nav about">Menu</a>
       <a href="#location" class="nav location">Lokasi</a>
       <a href="#review" class="nav review">Review</a>
       <a href="#promo" class="nav promo">Promo</a>
@@ -183,9 +44,9 @@
       <div class="image-carousel">
         <div class="carousel-track">
           <div class="carousel-slide">
-            <img src="./Source/Background/Banner.png" alt="Poster 1" />
-            <!-- <div class="hero-overlay">
-              <h1 class="hero-title">Rasa yang Tiada Tanding</h1>
+            <img src="./Source/Background/Banner.png" alt="bann 1" />
+            <div class="hero-overlay">
+              <!-- <h1 class="hero-title">Rasa yang Tiada Tanding</h1>
               <p class="hero-sub">Ayam goreng renyah dengan bumbu rahasia. Siap memanjakan lidahmu.</p>
               <div class="hero-ctas">
                 <a href="menu.html" class="btn btn-primary">Lihat Menu</a>
@@ -195,14 +56,26 @@
           </div>
 
           <div class="carousel-slide">
-            <img src="./Source/Background/Back1.jpg" alt="Background" />
+            <img src="./Source/Background/Banner1.png" alt="bann 2" />
             <div class="hero-overlay">
-              <h1 class="hero-title">Nikmati Paket Hemat</h1>
+              <!-- <h1 class="hero-title">Nikmati Paket Hemat</h1>
               <p class="hero-sub">Pilihan paket untuk keluarga & mahasiswa. Harga ramah kantong.</p>
               <div class="hero-ctas">
                 <a href="#promo" class="btn btn-primary">Cek Promo</a>
                 <a href="menu.html" class="btn btn-secondary">Lihat Menu</a>
-              </div>
+              </div> -->
+            </div>
+          </div>
+
+          <div class="carousel-slide">
+            <img src="./Source/Background/Banner2.png" alt="bann 3" />
+            <div class="hero-overlay">
+              <!-- <h1 class="hero-title">Nikmati Paket Hemat</h1>
+              <p class="hero-sub">Pilihan paket untuk keluarga & mahasiswa. Harga ramah kantong.</p>
+              <div class="hero-ctas">
+                <a href="#promo" class="btn btn-primary">Cek Promo</a>
+                <a href="menu.html" class="btn btn-secondary">Lihat Menu</a>
+              </div> -->
             </div>
           </div>
         </div>
@@ -211,6 +84,7 @@
       <div class="carousel-dots" role="tablist" aria-label="Carousel Navigation">
         <button class="dot active" data-index="0" aria-label="Slide 1"></button>
         <button class="dot" data-index="1" aria-label="Slide 2"></button>
+        <button class="dot" data-index="2" aria-label="Slide 3"></button>
       </div>
     </div>
   </section>
@@ -219,9 +93,11 @@
   <section class="home">
     <div class="home-container">
       <div class="welcome-section">
-        <h2 class="tagline">Rasa yang tiada tanding</h2>
+        <h2 class="tagline">Rasa yang Tiada Tanding</h2>
         <p class="description">Kami menyajikan ayam goreng dengan resep turun-temurun, bumbu meresap, dan tekstur yang selalu renyah. Cocok untuk santap bersama keluarga atau teman.</p>
-        <div class="cta-buttons"><a href="menu.html" class="btn btn-primary">Lihat Menu</a><a href="location.html" class="btn btn-secondary">Temukan Kami</a></div>
+        <div class="cta-buttons">
+          <!-- <a href="menu.html" class="btn btn-primary">Lihat Menu</a> -->
+          <a href="story.html" class="btn btn-secondary">Lihat Kisah Kami</a></div>
       </div>
 
       <!-- Menu Unggulan (card style #2: image top, text bottom) -->
@@ -238,7 +114,7 @@
           </article>
 
           <article class="menu-card">
-            <img src="./Source/Daftar menu/Bakwan.png" alt="Ayam Goreng Sambal">
+            <img src="./Source/Daftar menu/Paket Monas.png" alt="paket monas">
             <div class="menu-body">
               <h4>Ayam Goreng Sambal</h4>
               <p class="price">Rp 30.000</p>
@@ -247,7 +123,7 @@
           </article>
 
           <article class="menu-card">
-            <img src="./Source/Daftar menu/Bakwan.png" alt="Paket Hemat">
+            <img src="./Source/Daftar menu/Es Blewah.png" alt="blewah">
             <div class="menu-body">
               <h4>Paket Hemat</h4>
               <p class="price">Mulai Rp 45.000</p>
