--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 
     <nav class="header-right" aria-label="Main Navigation">
       <!-- <a href="#hero" class="nav home">Home</a> -->
-      <a href="#menu" class="nav menu">Home</a>
-      <a href="#why" class="nav why">Kisah Kami</a>
-      <a href="#about" class="nav about">Menu</a>
-      <a href="#location" class="nav location">Lokasi</a>
-      <a href="#review" class="nav review">Review</a>
-      <a href="#promo" class="nav promo">Promo</a>
+      <a href="index.html" class="nav menu">Home</a>
+      <a href="story.html" class="nav why">Kisah Kami</a>
+      <a href="menu.html" class="nav about">Menu</a>
+      <a href="news.html" class="nav promo">Berita</a>
+      <a href="review.php" class="nav review">Review</a>
+      <a href="location.html" class="nav location">Lokasi</a>
     </nav>
 
     <div class="hamburger" aria-hidden="true">
@@ -94,7 +94,9 @@
     <div class="home-container">
       <div class="welcome-section">
         <h2 class="tagline">Rasa yang Tiada Tanding</h2>
-        <p class="description">Kami menyajikan ayam goreng dengan resep turun-temurun, bumbu meresap, dan tekstur yang selalu renyah. Cocok untuk santap bersama keluarga atau teman.</p>
+        <p class="description">
+          Kami menyajikan ayam goreng dengan resep turun-temurun, bumbu meresap, dan tekstur yang selalu renyah. Cocok untuk santap bersama keluarga atau teman
+        </p>
         <div class="cta-buttons">
           <!-- <a href="menu.html" class="btn btn-primary">Lihat Menu</a> -->
           <a href="story.html" class="btn btn-secondary">Lihat Kisah Kami</a></div>
@@ -143,7 +145,7 @@
         </div>
       </section>
 
-      <!-- Tentang Kami -->
+      <!-- Tentang Kami
       <section id="about" class="about">
         <div class="about-inner">
           <div class="about-text">
@@ -152,14 +154,14 @@
           </div>
           <div class="about-img"><img src="./Source/About/about-1.jpg" alt="Tentang Kami"></div>
         </div>
-      </section>
+      </section> -->
 
       <!-- Lokasi & Jam -->
-      <section id="location" class="location">
+      <!-- <section id="location" class="location">
         <h3 class="section-heading">Lokasi & Jam Operasional</h3>
         <div class="location-inner">
           <div class="map">
-            <!-- placeholder, replace with actual Google Maps embed -->
+            
             <iframe src="https://www.google.com/maps/embed?pb=!1m18" aria-hidden="false" title="Map" loading="lazy"></iframe>
           </div>
           <div class="opening">
@@ -168,7 +170,7 @@
             <a href="https://wa.me/6281234567890" class="btn btn-primary" target="_blank" rel="noopener">Pesan Sekarang</a>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!-- Review -->
       <section id="review" class="reviews">
@@ -206,3 +208,4 @@
       <p class="copyright">© 2025 Ayam Goreng Monas. Hak Cipta Dilindungi.</p>
     </div>
   </footer>
+</body>
